<resources>
    <string name="app_name">TimeTable</string>
    <string name="_10_00_10_50_am">10:00-10:50 AM</string>
    <string name="_11_40_12_30pm">11:40-12:30PM</string>
    <string name="_10_50_11_40_am">10:50-11:40 AM</string>
    <string name="_1_20_2_10_pm">1:20 - 2:10 PM</string>
    <string name="_2_10_3_00_pm">2:10 - 3:00 PM</string>
    <string name="_3_00_3_50_pm">3:00 - 3:50 PM</string>
    <string name="_4_40_5_30_pm">4:40 - 5:30 PM</string>
    <string name="_3_50_4_40_pm">3:50 - 4:40 PM</string>
    <string name="_12_30_1_20_pm">12:30- 1:20 PM</string>
</resources>