<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back"
    tools:context=".MainActivity"
    tools:ignore="ExtraText">

    <EditText
        android:id="@+id/editTextDay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="Enter day name ... "
        android:inputType="textPersonName"
        android:text=""
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.023" />

    <TextView
        android:id="@+id/textViewResult"
        android:layout_width="327dp"
        android:layout_height="213dp"
        android:text=""
        android:textColor="#000000"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.464"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextDay"
        app:layout_constraintVertical_bias="0.748" />

    <Button
        android:id="@+id/button2"
        android:layout_width="162dp"
        android:layout_height="48dp"
        android:text="@string/_10_50_11_40_am"
        android:textColor="#090808"
        app:backgroundTint="#004DBAC7"
        app:layout_constraintBottom_toTopOf="@+id/button4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.807"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.5"
        app:strokeColor="#000000" />

    <Button
        android:id="@+id/button3"
        android:layout_width="162dp"
        android:layout_height="48dp"
        android:text="11:40-12:30 PM"
        android:textColor="#090808"
        app:backgroundTint="#004DBAC7"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.168"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.288"
        app:strokeColor="#000000" />

    <Button
        android:id="@+id/button4"
        android:layout_width="162dp"
        android:layout_height="48dp"
        android:text="@string/_12_30_1_20_pm"
        android:textColor="#090808"
        app:backgroundTint="#00FFEB3B"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.807"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.288"
        app:strokeColor="#000000" />

    <Button
        android:id="@+id/button5"
        android:layout_width="162dp"
        android:layout_height="48dp"
        android:text="@string/_1_20_2_10_pm"
        android:textColor="#090808"
        app:backgroundTint="#004DBAC7"
        app:layout_constraintBottom_toTopOf="@+id/button7"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.168"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button3"
        app:layout_constraintVertical_bias="0.5"
        app:strokeColor="#000000" />

    <Button
        android:id="@+id/button6"
        android:layout_width="162dp"
        android:layout_height="48dp"
        android:text="@string/_2_10_3_00_pm"
        android:textColor="#090808"
        app:backgroundTint="#00FFEB3B"
        app:layout_constraintBottom_toTopOf="@+id/button7"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.811"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button4"
        app:layout_constraintVertical_bias="0.5"
        app:strokeColor="#000000" />

    <Button
        android:id="@+id/button7"
        android:layout_width="162dp"
        android:layout_height="48dp"
        android:text="@string/_3_00_3_50_pm"
        android:textColor="#090808"
        app:backgroundTint="#00FFEB3B"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.168"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button5"
        app:strokeColor="#000000" />

    <Button
        android:id="@+id/button8"
        android:layout_width="162dp"
        android:layout_height="48dp"
        android:text="@string/_3_50_4_40_pm"
        android:textColor="#090808"
        app:backgroundTint="#00FFEB3B"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.807"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button5"
        app:strokeColor="#000000" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Select Time"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.462"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextDay"
        app:layout_constraintVertical_bias="0.102" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="dev@PrabuddhaChatterjee"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="210dp"
        android:layout_height="50dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.089">

        <RadioButton
            android:id="@+id/radioButton1"
            android:layout_width="106dp"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="Grp X" />

        <RadioButton
            android:id="@+id/radioButton2"
            android:layout_width="95dp"
            android:layout_height="wrap_content"
            android:text="Grp Y" />
    </RadioGroup>

    <Button
        android:id="@+id/button1"
        android:layout_width="162dp"
        android:layout_height="48dp"
        android:text="10:00-10:50 AM"
        android:textColor="#000000"
        app:backgroundTint="#00FFFFFF"
        app:layout_constraintBottom_toTopOf="@+id/button3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.168"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.5"
        app:strokeColor="#000000" /><![CDATA[



    />

]]>
</androidx.constraintlayout.widget.ConstraintLayout>